tests/pass/test-gram_return.frac
foo(int x, string y) {
  print(x);
  return y;
}

gram koch = {
    alphabet: [F, p, m],
    init: 'F p p F p p F',
    rules: {
        'F' -> 'F m F p p F m F',
        'F' -> move(1),
        'm' -> rturn(60),
        'p' -> lturn(60)
    }
}

main() {
    foo(3,"hello");
    draw(koch, 5);
}
