tests/fail/gram_no_init.frac
gram koch = {
    alphabet: [F, p, m],
    init: '',
    rules: {
        'F' -> 'F m F p p F m F',
        'F' -> move(1),
        'm' -> rturn(60),
        'p' -> lturn(60)
    }
}

main() {
    draw(koch, 6);
}
